--- a/ml_1m/create_ml1m_dataset.ipynb
+++ b/ml_1m/create_ml1m_dataset.ipynb
@@ -888,7 +888,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -902,7 +902,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
