Inference script for zeroshot mixtral

--- a/ml_1m/ml_1m/ctr_zeroshot/create_CTR_valid_test_data.ipynb
+++ b/ml_1m/ml_1m/ctr_zeroshot/create_CTR_valid_test_data.ipynb
@@ -37,9 +37,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_train_path = './train_valid_test/user_train.pkl'\n",
-    "user_valid_path = './train_valid_test/user_valid.pkl'\n",
-    "user_test_path = './train_valid_test/user_test.pkl'"
+    "user_train_path = '../train_valid_test/user_train.pkl'\n",
+    "user_valid_path = '../train_valid_test/user_valid.pkl'\n",
+    "user_test_path = '../train_valid_test/user_test.pkl'"
    ]
   },
   {
@@ -143,7 +143,7 @@
     }
    ],
    "source": [
-    "user_profile_path = './user_profile/cleaned_user_profile_mixtral.pkl'\n",
+    "user_profile_path = '../user_profile/cleaned_user_profile_mixtral.pkl'\n",
     "with open(user_profile_path, 'rb') as f:\n",
     "    user_profile_dict = pickle.load(f)\n",
     "print(user_profile_dict[user_id])"
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "movie_summary_df = pd.read_csv('movie_summary_25_words.csv')\n",
+    "movie_summary_df = pd.read_csv('../movie_summary_25_words.csv')\n",
     "movie_summary_df.head()"
    ]
   },
@@ -330,7 +330,7 @@
     }
    ],
    "source": [
-    "user_df = pd.read_csv('users.csv')\n",
+    "user_df = pd.read_csv('../users.csv')\n",
     "user_df.head()"
    ]
   },
@@ -416,7 +416,7 @@
     }
    ],
    "source": [
-    "ratings_df = pd.read_csv('ratings.csv')\n",
+    "ratings_df = pd.read_csv('../ratings.csv')\n",
     "ratings_df.head()"
    ]
   },
@@ -536,7 +536,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "crt_valid_zeroshot_dataset_path = './crt_zeroshot_dataset/crt_valid_zeroshot_dataset.pkl'\n",
+    "crt_valid_zeroshot_dataset_path = './ctr_zeroshot_dataset/ctr_valid_zeroshot_dataset.pkl'\n",
     "with open(crt_valid_zeroshot_dataset_path, 'wb') as f:\n",
     "    pickle.dump(crt_valid_zeroshot_dataset, f)\n",
     "    f.close()"
