Created vanilla Test dataset - No Reasoning No Description

--- a/ml_1m/ml_1m/ctr_zeroshot/clean_inference.ipynb
+++ b/ml_1m/ml_1m/ctr_zeroshot/clean_inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "cd60e3f4-25e6-4bf0-9437-71e253e3a79b",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "d7269b45-6c0d-4e5b-8bc3-0e5bc56055d5",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3950\n"
+      "4050\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6fabcd49-cf21-45f5-aa70-24f71818dbdb",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "4        1      2340       3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b6260dae-ca28-494c-8e34-7ff9f714b80f",
    "metadata": {
     "scrolled": true
@@ -236,7 +236,7 @@
        "1701     1006      2706       4"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "6c385f0f-e18e-449f-8932-2aa4e29b3228",
    "metadata": {
     "scrolled": true
@@ -258,9 +258,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes: 3022 -- No: 865 -- Invalid: 63\n",
-      "invalid_users: [1164, 1283, 1375, 1413, 1431, 1468, 147, 1533, 1584, 1606, 1612, 1638, 1645, 1679, 1710, 1725, 1735, 1755, 1772, 1844, 1854, 1948, 1955, 2024, 2077, 2118, 2121, 2302, 2375, 2415, 2501, 2604, 2608, 2624, 2635, 2695, 276, 2798, 2839, 3265, 330, 3395, 3397, 3538, 3586, 3716, 3762, 3782, 3842, 3867, 387, 3929, 3942, 4120, 4167, 4206, 4291, 431, 435, 4478, 4526, 4539, 4543]\n",
-      "3950\n"
+      "Yes: 3096 -- No: 888 -- Invalid: 66\n",
+      "invalid_users: [1164, 1283, 1375, 1413, 1431, 1468, 147, 1533, 1584, 1606, 1612, 1638, 1645, 1679, 1710, 1725, 1735, 1755, 1772, 1844, 1854, 1948, 1955, 2024, 2077, 2118, 2121, 2302, 2375, 2415, 2501, 2604, 2608, 2624, 2635, 2695, 276, 2798, 2839, 3265, 330, 3395, 3397, 3538, 3586, 3716, 3762, 3782, 3842, 3867, 387, 3929, 3942, 4120, 4167, 4206, 4291, 431, 435, 4478, 4526, 4539, 4543, 4596, 4626, 4627]\n",
+      "4050\n"
      ]
     }
    ],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "7a7e4e8c-dd55-49ee-8ccc-754489a27462",
    "metadata": {},
    "outputs": [
@@ -306,12 +306,12 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[ 279  416]\n",
-      " [ 649 2606]]\n",
-      "AUC: 0.6010266441224901\n",
-      "Precision: 0.8623428193249504\n",
-      "Recall: 0.8006144393241167\n",
-      "Accuracy: 0.730379746835443\n"
+      "[[ 287  424]\n",
+      " [ 667 2672]]\n",
+      "AUC: 0.6019482070353817\n",
+      "Precision: 0.8630490956072352\n",
+      "Recall: 0.8002395926924228\n",
+      "Accuracy: 0.7306172839506173\n"
      ]
     }
    ],
