Zeroshot CTR valid data Confusion Matrix: [[ 434  619]  [ 982 4005]] AUC: 0.6076218871820771 Precision: 0.8661332179930796 Recall: 0.8030880288750752 Accuracy: 0.7349337748344371

--- a/ml_1m/ml_1m/ctr_zeroshot/clean_inference.ipynb
+++ b/ml_1m/ml_1m/ctr_zeroshot/clean_inference.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "d7269b45-6c0d-4e5b-8bc3-0e5bc56055d5",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4050\n"
+      "6040\n"
      ]
     }
    ],
@@ -258,9 +258,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes: 3096 -- No: 888 -- Invalid: 66\n",
-      "invalid_users: [1164, 1283, 1375, 1413, 1431, 1468, 147, 1533, 1584, 1606, 1612, 1638, 1645, 1679, 1710, 1725, 1735, 1755, 1772, 1844, 1854, 1948, 1955, 2024, 2077, 2118, 2121, 2302, 2375, 2415, 2501, 2604, 2608, 2624, 2635, 2695, 276, 2798, 2839, 3265, 330, 3395, 3397, 3538, 3586, 3716, 3762, 3782, 3842, 3867, 387, 3929, 3942, 4120, 4167, 4206, 4291, 431, 435, 4478, 4526, 4539, 4543, 4596, 4626, 4627]\n",
-      "4050\n"
+      "Yes: 4624 -- No: 1318 -- Invalid: 98\n",
+      "invalid_users: [1164, 1283, 1375, 1413, 1431, 1468, 147, 1533, 1584, 1606, 1612, 1638, 1645, 1679, 1710, 1725, 1735, 1755, 1772, 1844, 1854, 1948, 1955, 2024, 2077, 2118, 2121, 2302, 2375, 2415, 2501, 2604, 2608, 2624, 2635, 2695, 276, 2798, 2839, 3265, 330, 3395, 3397, 3538, 3586, 3716, 3762, 3782, 3842, 3867, 387, 3929, 3942, 4120, 4167, 4206, 4291, 431, 435, 4478, 4526, 4539, 4543, 4596, 4626, 4627, 4703, 4727, 4792, 4794, 486, 4981, 5108, 5109, 511, 5207, 5265, 541, 5561, 5574, 5649, 5651, 5687, 572, 5747, 5748, 5759, 5774, 5775, 5786, 5788, 5900, 5946, 5980, 671, 882, 978, 98]\n",
+      "6040\n"
      ]
     }
    ],
@@ -306,12 +306,12 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[ 287  424]\n",
-      " [ 667 2672]]\n",
-      "AUC: 0.6019482070353817\n",
-      "Precision: 0.8630490956072352\n",
-      "Recall: 0.8002395926924228\n",
-      "Accuracy: 0.7306172839506173\n"
+      "[[ 434  619]\n",
+      " [ 982 4005]]\n",
+      "AUC: 0.6076218871820771\n",
+      "Precision: 0.8661332179930796\n",
+      "Recall: 0.8030880288750752\n",
+      "Accuracy: 0.7349337748344371\n"
      ]
     }
    ],
