Vanilla No Description No Reasoning Test Results

--- a/ml_1m/ml_1m/ctr_vanilla_zeroshot/clean_inference.ipynb
+++ b/ml_1m/ml_1m/ctr_vanilla_zeroshot/clean_inference.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "id": "d7269b45-6c0d-4e5b-8bc3-0e5bc56055d5",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6fabcd49-cf21-45f5-aa70-24f71818dbdb",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "4        1      2340       3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "b6260dae-ca28-494c-8e34-7ff9f714b80f",
    "metadata": {
     "scrolled": true
@@ -209,7 +209,7 @@
        "989     1001      3756       2"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
+   "id": "b0854a9e-f96d-417d-a854-f080f45b4573",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>1</td>\n",
+       "      <td>48</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>453</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2252</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>529</th>\n",
+       "      <td>100</td>\n",
+       "      <td>265</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>613</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>1104</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>990</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>647</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     user_id  movie_id  rating\n",
+       "52         1        48       5\n",
+       "453       10      2252       5\n",
+       "529      100       265       3\n",
+       "613     1000      1104       5\n",
+       "990     1001       647       3"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_test_movie_rating_df = ratings_df.groupby('user_id').nth(-1)\n",
+    "user_test_movie_rating_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "6c385f0f-e18e-449f-8932-2aa4e29b3228",
    "metadata": {
     "scrolled": true
@@ -231,8 +317,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes: 5549 -- No: 111 -- Invalid: 380\n",
-      "invalid_users: [1031, 1039, 1046, 1070, 1091, 1123, 1126, 1154, 1157, 1171, 1189, 1213, 1236, 1250, 1282, 130, 1305, 1310, 1319, 1336, 1363, 1369, 1406, 1412, 1413, 1416, 1429, 1444, 1452, 1453, 1459, 1471, 1488, 15, 1518, 1531, 1534, 1539, 1541, 1549, 1598, 160, 1604, 1612, 1616, 1621, 1640, 1651, 1652, 1653, 1655, 1656, 1664, 1668, 1674, 168, 1703, 1708, 171, 1711, 1713, 1730, 1751, 1754, 1763, 1771, 1783, 1787, 1813, 1818, 1864, 1886, 1893, 1898, 1906, 1967, 1989, 1991, 1993, 20, 2006, 2045, 2066, 2080, 2086, 2116, 2128, 2131, 2152, 217, 2171, 2182, 2193, 2207, 2210, 226, 2268, 2287, 2295, 2311, 2347, 2357, 2363, 2371, 2379, 2385, 2399, 2441, 2443, 2450, 2470, 2490, 250, 2511, 2516, 2530, 2542, 2549, 2553, 2563, 2613, 2640, 2653, 2673, 2686, 2690, 2696, 2714, 2729, 2735, 2759, 276, 2763, 2799, 2816, 2819, 2834, 2836, 2884, 2893, 2908, 2920, 2956, 2962, 2977, 2982, 2999, 3009, 3019, 3021, 304, 3040, 305, 3061, 3071, 3076, 3122, 3124, 3165, 3168, 3176, 3179, 3181, 3188, 320, 3212, 3222, 3225, 3234, 3247, 3254, 3273, 3286, 3303, 334, 3376, 3388, 3396, 3407, 3439, 3440, 3443, 3448, 3455, 3470, 3480, 3495, 3496, 351, 3530, 3535, 3542, 3552, 3563, 361, 3616, 3623, 3636, 3691, 3722, 373, 3739, 3764, 3765, 3783, 3788, 3802, 383, 384, 3870, 3883, 3897, 3911, 3914, 3915, 3918, 3954, 3977, 4010, 4049, 4065, 4068, 4074, 4106, 4121, 4124, 4143, 4146, 4154, 417, 4184, 4192, 4197, 4201, 4211, 4228, 4230, 4254, 4264, 4270, 4275, 4289, 4332, 4333, 4341, 4348, 4365, 4372, 4375, 4396, 4402, 4419, 4443, 4448, 4463, 4464, 448, 4504, 4515, 4525, 4527, 4545, 4548, 4558, 4576, 4604, 4665, 4677, 4703, 4722, 4730, 4749, 4776, 4839, 4851, 4873, 488, 4891, 4900, 4926, 4935, 4953, 4968, 4969, 497, 4970, 4987, 4988, 4991, 4992, 5012, 5042, 5052, 5062, 5073, 5116, 5117, 5122, 5145, 5154, 5155, 5159, 5164, 5192, 5215, 5216, 522, 5231, 5266, 5292, 5295, 5309, 5314, 535, 5380, 5388, 5391, 5398, 5409, 5439, 5467, 5471, 5477, 5498, 5517, 5529, 5530, 5579, 5599, 5601, 5606, 5656, 5659, 5697, 5719, 572, 5725, 5735, 5759, 5767, 5772, 5784, 5791, 5796, 5800, 5804, 5810, 5817, 5828, 5876, 5877, 5883, 5888, 5899, 5901, 5904, 5918, 5962, 5967, 5993, 600, 6012, 6034, 642, 665, 668, 708, 723, 751, 782, 791, 821, 827, 833, 902, 904, 932, 94, 947, 951]\n",
+      "Yes: 5584 -- No: 121 -- Invalid: 335\n",
+      "invalid_users: [1039, 1070, 1071, 1091, 1123, 113, 1157, 1226, 1236, 1249, 1250, 1252, 1282, 1284, 1307, 1309, 1310, 1318, 1336, 1363, 1377, 1406, 1412, 1416, 1417, 1431, 1439, 1444, 1453, 1456, 1471, 1488, 1493, 1520, 1534, 1539, 1549, 1582, 1596, 1598, 1604, 1612, 1615, 1621, 1652, 168, 1686, 1702, 171, 1713, 1719, 172, 1751, 1754, 1765, 1766, 1767, 1771, 1801, 1818, 1864, 1892, 1893, 1898, 1907, 191, 1927, 1964, 1993, 2028, 2044, 2045, 2051, 2053, 2056, 207, 209, 2128, 2133, 2160, 217, 2170, 2207, 2210, 2224, 223, 2292, 2295, 2311, 2336, 234, 2347, 2356, 2357, 2369, 2373, 2375, 2379, 2385, 2399, 2431, 2434, 2488, 2490, 250, 2502, 2511, 2516, 2527, 2530, 254, 2542, 2549, 2582, 2601, 2640, 2646, 2653, 2671, 2673, 268, 2686, 2696, 2705, 2707, 2710, 2714, 2725, 2755, 277, 2816, 2819, 2834, 2867, 2871, 2879, 2884, 2887, 2920, 2923, 2925, 2977, 2982, 3040, 3076, 311, 3124, 3133, 3176, 3181, 3222, 3225, 3234, 3236, 3254, 3273, 3282, 3287, 3288, 331, 3404, 3407, 3421, 3443, 3448, 3455, 3488, 3495, 3496, 3513, 3542, 3545, 3548, 3552, 356, 3570, 3579, 3599, 361, 3622, 3623, 3630, 3633, 3642, 3712, 3716, 3739, 3783, 3788, 383, 3838, 384, 3863, 3870, 3877, 3897, 3911, 3915, 3918, 3928, 3933, 395, 3956, 3969, 3977, 4025, 4065, 4066, 4073, 41, 410, 4105, 4106, 4124, 4143, 4151, 4154, 4176, 4184, 4191, 4201, 4202, 421, 4228, 4244, 4259, 4264, 427, 43, 4304, 4325, 4365, 4370, 4372, 4375, 4393, 4410, 4464, 448, 4527, 4542, 4548, 4554, 4558, 456, 4576, 4614, 4615, 4672, 4698, 4730, 4741, 4749, 4751, 4758, 4775, 4776, 4792, 4839, 4851, 488, 4880, 4881, 4900, 4912, 4943, 4988, 4996, 5007, 5012, 503, 5052, 5069, 5072, 5073, 5122, 5145, 5159, 5160, 5191, 5192, 5215, 5264, 5274, 5295, 5314, 5320, 535, 5351, 5358, 5391, 5392, 5407, 5477, 5499, 5533, 5606, 5636, 5656, 568, 5725, 5735, 5772, 5793, 5804, 5810, 5817, 5863, 5867, 5873, 5899, 592, 5932, 5967, 5979, 6034, 6038, 642, 665, 703, 708, 723, 758, 761, 782, 821, 827, 898, 900, 907, 942, 947, 951, 957, 969]\n",
       "6040\n"
      ]
     }
@@ -270,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "id": "7a7e4e8c-dd55-49ee-8ccc-754489a27462",
    "metadata": {},
    "outputs": [
@@ -279,12 +365,12 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[ 118  935]\n",
-      " [ 373 4614]]\n",
-      "AUC: 0.5186331565584289\n",
-      "Precision: 0.831501171382231\n",
-      "Recall: 0.9252055343894124\n",
-      "Accuracy: 0.7834437086092715\n"
+      "[[ 122  944]\n",
+      " [ 334 4640]]\n",
+      "AUC: 0.523648676683482\n",
+      "Precision: 0.830945558739255\n",
+      "Recall: 0.9328508242862887\n",
+      "Accuracy: 0.7884105960264901\n"
      ]
     }
    ],
@@ -297,7 +383,7 @@
     "fn_users = []\n",
     "\n",
     "for user, inference in user_inference_dict.items():\n",
-    "    original_rating = user_valid_movie_rating_df[user_valid_movie_rating_df['user_id'] == user]['rating'].values[0]\n",
+    "    original_rating = user_test_movie_rating_df[user_test_movie_rating_df['user_id'] == user]['rating'].values[0]\n",
     "    # print(original_rating)\n",
     "    if original_rating >= 3:\n",
     "        y_true.append(1)\n",
@@ -325,6 +411,14 @@
     "accuracy = accuracy_score(y_true, y_pred)\n",
     "print(\"Accuracy:\", accuracy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29532dd9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
