Zeroshot No Reasoning Only Description Valid and Test Results

--- a/ml_1m/ml_1m/ctr_only_description_zeroshot/clean_inference.ipynb
+++ b/ml_1m/ml_1m/ctr_only_description_zeroshot/clean_inference.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "d7269b45-6c0d-4e5b-8bc3-0e5bc56055d5",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,8 @@
     }
    ],
    "source": [
-    "inference_path = 'ctr_valid_inference_mixtral.pkl'\n",
+    "# inference_path = 'ctr_valid_only_desc_inference_mixtral.pkl'\n",
+    "inference_path = 'ctr_test_only_desc_inference_mixtral.pkl'\n",
     "with open(inference_path, 'rb') as f:\n",
     "    inference_dict = pickle.load(f)\n",
     "print(len(inference_dict))"
@@ -248,7 +249,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
+   "id": "ceb3113d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>1</td>\n",
+       "      <td>48</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>453</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2252</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>529</th>\n",
+       "      <td>100</td>\n",
+       "      <td>265</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>613</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>1104</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>990</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>647</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1056</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>1222</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1085</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>337</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1566</th>\n",
+       "      <td>1004</td>\n",
+       "      <td>1266</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1658</th>\n",
+       "      <td>1005</td>\n",
+       "      <td>266</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1702</th>\n",
+       "      <td>1006</td>\n",
+       "      <td>2762</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      user_id  movie_id  rating\n",
+       "52          1        48       5\n",
+       "453        10      2252       5\n",
+       "529       100       265       3\n",
+       "613      1000      1104       5\n",
+       "990      1001       647       3\n",
+       "1056     1002      1222       5\n",
+       "1085     1003       337       4\n",
+       "1566     1004      1266       5\n",
+       "1658     1005       266       1\n",
+       "1702     1006      2762       4"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_test_movie_rating_df = ratings_df.groupby('user_id').nth(-1)\n",
+    "user_test_movie_rating_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "6c385f0f-e18e-449f-8932-2aa4e29b3228",
    "metadata": {
     "scrolled": true
@@ -258,8 +380,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes: 4624 -- No: 1318 -- Invalid: 98\n",
-      "invalid_users: [1164, 1283, 1375, 1413, 1431, 1468, 147, 1533, 1584, 1606, 1612, 1638, 1645, 1679, 1710, 1725, 1735, 1755, 1772, 1844, 1854, 1948, 1955, 2024, 2077, 2118, 2121, 2302, 2375, 2415, 2501, 2604, 2608, 2624, 2635, 2695, 276, 2798, 2839, 3265, 330, 3395, 3397, 3538, 3586, 3716, 3762, 3782, 3842, 3867, 387, 3929, 3942, 4120, 4167, 4206, 4291, 431, 435, 4478, 4526, 4539, 4543, 4596, 4626, 4627, 4703, 4727, 4792, 4794, 486, 4981, 5108, 5109, 511, 5207, 5265, 541, 5561, 5574, 5649, 5651, 5687, 572, 5747, 5748, 5759, 5774, 5775, 5786, 5788, 5900, 5946, 5980, 671, 882, 978, 98]\n",
+      "Yes: 5753 -- No: 286 -- Invalid: 1\n",
+      "invalid_users: [189]\n",
       "6040\n"
      ]
     }
@@ -297,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7a7e4e8c-dd55-49ee-8ccc-754489a27462",
    "metadata": {},
    "outputs": [
@@ -306,12 +428,12 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[ 410  643]\n",
-      " [ 908 4079]]\n",
-      "AUC: 0.6036451659404669\n",
-      "Precision: 0.8638288860652266\n",
-      "Recall: 0.817926609183878\n",
-      "Accuracy: 0.7432119205298013\n"
+      "[[ 157  909]\n",
+      " [ 129 4845]]\n",
+      "AUC: 0.5606723442199626\n",
+      "Precision: 0.8420229405630866\n",
+      "Recall: 0.974065138721351\n",
+      "Accuracy: 0.8281456953642384\n"
      ]
     }
    ],
@@ -324,7 +446,8 @@
     "fn_users = []\n",
     "\n",
     "for user, inference in user_inference_dict.items():\n",
-    "    original_rating = user_valid_movie_rating_df[user_valid_movie_rating_df['user_id'] == user]['rating'].values[0]\n",
+    "    # original_rating = user_valid_movie_rating_df[user_valid_movie_rating_df['user_id'] == user]['rating'].values[0]\n",
+    "    original_rating = user_test_movie_rating_df[user_test_movie_rating_df['user_id'] == user]['rating'].values[0]\n",
     "    # print(original_rating)\n",
     "    if original_rating >= 3:\n",
     "        y_true.append(1)\n",
