CTR Zeroshot Reasoning from Description - Test Results

--- a/ml_1m/ml_1m/ctr_zeroshot/clean_inference.ipynb
+++ b/ml_1m/ml_1m/ctr_zeroshot/clean_inference.ipynb
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2000\n"
+      "6040\n"
      ]
     }
    ],
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "6c385f0f-e18e-449f-8932-2aa4e29b3228",
    "metadata": {
     "scrolled": true
@@ -380,9 +380,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes: 1504 -- No: 461 -- Invalid: 35\n",
-      "invalid_users: [1160, 1207, 1248, 1283, 1341, 1527, 1587, 1602, 1634, 1716, 1759, 1793, 1816, 1828, 185, 1863, 1920, 1971, 2041, 2092, 2118, 2212, 2339, 2388, 2440, 2530, 2551, 2578, 2599, 2624, 2657, 2700, 2711, 2739, 2775]\n",
-      "2000\n"
+      "Yes: 4547 -- No: 1399 -- Invalid: 94\n",
+      "invalid_users: [1160, 1207, 1248, 1283, 1341, 1527, 1587, 1602, 1634, 1716, 1759, 1793, 1816, 1828, 185, 1863, 1920, 1971, 2041, 2092, 2118, 2212, 2339, 2388, 2440, 2530, 2551, 2578, 2599, 2624, 2657, 2700, 2711, 2739, 2775, 2848, 2864, 2913, 2977, 3013, 3026, 3058, 3112, 3143, 3191, 3436, 3598, 3599, 377, 379, 3934, 3953, 3996, 4003, 4028, 4078, 4135, 4223, 4234, 4260, 4335, 4444, 4457, 4473, 4616, 4836, 4865, 4943, 5079, 5106, 5111, 5127, 517, 5191, 5207, 5260, 5263, 530, 5431, 5552, 5606, 5747, 579, 5791, 5821, 5891, 5969, 5980, 6031, 637, 756, 772, 819, 934]\n",
+      "6040\n"
      ]
     }
    ],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "7a7e4e8c-dd55-49ee-8ccc-754489a27462",
    "metadata": {},
    "outputs": [
@@ -428,12 +428,12 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[ 162  199]\n",
-      " [ 334 1305]]\n",
-      "AUC: 0.6224853341085285\n",
-      "Precision: 0.867686170212766\n",
-      "Recall: 0.7962172056131788\n",
-      "Accuracy: 0.7335\n"
+      "[[ 464  602]\n",
+      " [1029 3945]]\n",
+      "AUC: 0.6141981455538782\n",
+      "Precision: 0.8676050142951397\n",
+      "Recall: 0.793124246079614\n",
+      "Accuracy: 0.7299668874172185\n"
      ]
     }
    ],
