Embeddings from OpenAI text-embedding-large-3 and reduced to 1024 as trained with MRL

--- a/ml_1m/ml_1m_item_desc_generation.ipynb
+++ b/ml_1m/ml_1m_item_desc_generation.ipynb
@@ -1475,7 +1475,8 @@
      "user_tz": 300
     },
     "id": "IXYiZtuXRCtO",
-    "outputId": "a4eef2b6-e6f4-4fb9-fdf1-84ac1a96999e"
+    "outputId": "a4eef2b6-e6f4-4fb9-fdf1-84ac1a96999e",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2324,7 +2325,8 @@
      "user_tz": 300
     },
     "id": "4k-Xl2t1bCII",
-    "outputId": "c5e53c55-eaa8-45af-d513-ad916f0a4bef"
+    "outputId": "c5e53c55-eaa8-45af-d513-ad916f0a4bef",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2453,7 +2455,8 @@
      "user_tz": 300
     },
     "id": "YxqTYwYgitLd",
-    "outputId": "da806d1f-1630-4ea9-fab7-4f21cfb1cc69"
+    "outputId": "da806d1f-1630-4ea9-fab7-4f21cfb1cc69",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -7488,7 +7491,8 @@
      "user_tz": 300
     },
     "id": "sblVvj5WkOA8",
-    "outputId": "c9e76b55-13fd-461f-df71-5548285a4c90"
+    "outputId": "c9e76b55-13fd-461f-df71-5548285a4c90",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -11745,7 +11749,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -11759,9 +11763,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
