--- a/ml_1m/ml_1m/semantic_ctr_zeroshot/create_embeddings.ipynb
+++ b/ml_1m/ml_1m/semantic_ctr_zeroshot/create_embeddings.ipynb
@@ -1074,17 +1074,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "bdedae1a-3e91-4508-8e0c-f4a2d2b178b0",
+   "execution_count": 41,
+   "id": "68cc4f12-6111-4a83-95d5-627cc0ba2455",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>cleaned_genre</th>\n",
+       "      <th>year</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>embeddings_1024</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>Animation,Children's,Comedy</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Toy Story is a groundbreaking animated film th...</td>\n",
+       "      <td>[-0.04189223359988252, 0.05833308604075958, -0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>Adventure,Children's,Fantasy</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>\"Jumanji (1995) is a thrilling adventure film ...</td>\n",
+       "      <td>[0.013023682103039223, 0.03859715946740607, -0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>Comedy,Romance</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>\"Grumpier Old Men is a hilarious and heartwarm...</td>\n",
+       "      <td>[0.02791051785617025, 0.014874854317657128, -0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Waiting to Exhale</td>\n",
+       "      <td>Comedy,Drama</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>\"Waiting to Exhale\" (1995) is a heartfelt dram...</td>\n",
+       "      <td>[-0.058955313685819216, 0.05494043513368762, -...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Father of the Bride Part II</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Father of the Bride Part II (1995) is a heartw...</td>\n",
+       "      <td>[-0.005895226078259542, 0.02467729983744119, -...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movie_id                          name                 cleaned_genre  year  \\\n",
+       "0         1                    Toy Story    Animation,Children's,Comedy  1995   \n",
+       "1         2                      Jumanji   Adventure,Children's,Fantasy  1995   \n",
+       "2         3             Grumpier Old Men                 Comedy,Romance  1995   \n",
+       "3         4            Waiting to Exhale                   Comedy,Drama  1995   \n",
+       "4         5  Father of the Bride Part II                         Comedy  1995   \n",
+       "\n",
+       "                                             summary  \\\n",
+       "0  Toy Story is a groundbreaking animated film th...   \n",
+       "1  \"Jumanji (1995) is a thrilling adventure film ...   \n",
+       "2  \"Grumpier Old Men is a hilarious and heartwarm...   \n",
+       "3  \"Waiting to Exhale\" (1995) is a heartfelt dram...   \n",
+       "4  Father of the Bride Part II (1995) is a heartw...   \n",
+       "\n",
+       "                                     embeddings_1024  \n",
+       "0  [-0.04189223359988252, 0.05833308604075958, -0...  \n",
+       "1  [0.013023682103039223, 0.03859715946740607, -0...  \n",
+       "2  [0.02791051785617025, 0.014874854317657128, -0...  \n",
+       "3  [-0.058955313685819216, 0.05494043513368762, -...  \n",
+       "4  [-0.005895226078259542, 0.02467729983744119, -...  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "movies_summary_df.to_csv('movies_summary_embeddings.csv', index=False)"
+    "movie_df = movies_summary_df.drop(['all_text', 'embeddings_3072'], axis = 1)\n",
+    "movie_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
+   "id": "19a31c14-f77c-4d7b-9ed0-84952a64cdf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_df.to_csv('movies_summary_1024_embeddings.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "85817fe3-9c14-4a9f-9acc-de3b7a34a817",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>cleaned_genre</th>\n",
+       "      <th>year</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>embeddings_3072</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>Animation,Children's,Comedy</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Toy Story is a groundbreaking animated film th...</td>\n",
+       "      <td>[-0.030682744458317757, 0.0427243672311306, -0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>Adventure,Children's,Fantasy</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>\"Jumanji (1995) is a thrilling adventure film ...</td>\n",
+       "      <td>[0.009568397887051105, 0.02835703268647194, -0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>Comedy,Romance</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>\"Grumpier Old Men is a hilarious and heartwarm...</td>\n",
+       "      <td>[0.02002841793000698, 0.010674105025827885, -0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Waiting to Exhale</td>\n",
+       "      <td>Comedy,Drama</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>\"Waiting to Exhale\" (1995) is a heartfelt dram...</td>\n",
+       "      <td>[-0.04223187267780304, 0.039355866611003876, -...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Father of the Bride Part II</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Father of the Bride Part II (1995) is a heartw...</td>\n",
+       "      <td>[-0.004295275546610355, 0.0179799385368824, -0...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movie_id                          name                 cleaned_genre  year  \\\n",
+       "0         1                    Toy Story    Animation,Children's,Comedy  1995   \n",
+       "1         2                      Jumanji   Adventure,Children's,Fantasy  1995   \n",
+       "2         3             Grumpier Old Men                 Comedy,Romance  1995   \n",
+       "3         4            Waiting to Exhale                   Comedy,Drama  1995   \n",
+       "4         5  Father of the Bride Part II                         Comedy  1995   \n",
+       "\n",
+       "                                             summary  \\\n",
+       "0  Toy Story is a groundbreaking animated film th...   \n",
+       "1  \"Jumanji (1995) is a thrilling adventure film ...   \n",
+       "2  \"Grumpier Old Men is a hilarious and heartwarm...   \n",
+       "3  \"Waiting to Exhale\" (1995) is a heartfelt dram...   \n",
+       "4  Father of the Bride Part II (1995) is a heartw...   \n",
+       "\n",
+       "                                     embeddings_3072  \n",
+       "0  [-0.030682744458317757, 0.0427243672311306, -0...  \n",
+       "1  [0.009568397887051105, 0.02835703268647194, -0...  \n",
+       "2  [0.02002841793000698, 0.010674105025827885, -0...  \n",
+       "3  [-0.04223187267780304, 0.039355866611003876, -...  \n",
+       "4  [-0.004295275546610355, 0.0179799385368824, -0...  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_df = movies_summary_df.drop(['all_text', 'embeddings_1024'], axis = 1)\n",
+    "movie_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "7e4b7746-82d3-4425-b469-e5f46b1eecf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_df.to_csv('movies_summary_3072_embeddings.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bf67bf0-aaf4-48a2-a6c8-0c1f19617616",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "a5ec6933-58e9-455c-b2f3-8ba210fbfe08",
    "metadata": {},
    "outputs": [
@@ -1114,8 +1368,6 @@
        "      <th>cleaned_genre</th>\n",
        "      <th>year</th>\n",
        "      <th>summary</th>\n",
-       "      <th>all_text</th>\n",
-       "      <th>embeddings_3072</th>\n",
        "      <th>embeddings_1024</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1127,8 +1379,6 @@
        "      <td>Animation,Children's,Comedy</td>\n",
        "      <td>1995</td>\n",
        "      <td>Toy Story is a groundbreaking animated film th...</td>\n",
-       "      <td>Toy Story is a groundbreaking animated film th...</td>\n",
-       "      <td>[-0.030682744458317757, 0.0427243672311306, -0...</td>\n",
        "      <td>[-0.04189223  0.05833309 -0.02476214 ... -0.02...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1138,8 +1388,6 @@
        "      <td>Adventure,Children's,Fantasy</td>\n",
        "      <td>1995</td>\n",
        "      <td>\"Jumanji (1995) is a thrilling adventure film ...</td>\n",
-       "      <td>\"Jumanji (1995) is a thrilling adventure film ...</td>\n",
-       "      <td>[0.009568397887051105, 0.02835703268647194, -0...</td>\n",
        "      <td>[ 0.01302368  0.03859716 -0.01630003 ... -0.01...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1149,8 +1397,6 @@
        "      <td>Comedy,Romance</td>\n",
        "      <td>1995</td>\n",
        "      <td>\"Grumpier Old Men is a hilarious and heartwarm...</td>\n",
-       "      <td>\"Grumpier Old Men is a hilarious and heartwarm...</td>\n",
-       "      <td>[0.02002841793000698, 0.010674105025827885, -0...</td>\n",
        "      <td>[ 0.02791052  0.01487485 -0.02803959 ... -0.01...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1160,8 +1406,6 @@
        "      <td>Comedy,Drama</td>\n",
        "      <td>1995</td>\n",
        "      <td>\"Waiting to Exhale\" (1995) is a heartfelt dram...</td>\n",
-       "      <td>\"Waiting to Exhale\" (1995) is a heartfelt dram...</td>\n",
-       "      <td>[-0.04223187267780304, 0.039355866611003876, -...</td>\n",
        "      <td>[-0.05895531  0.05494044 -0.01637648 ... -0.00...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1171,8 +1415,6 @@
        "      <td>Comedy</td>\n",
        "      <td>1995</td>\n",
        "      <td>Father of the Bride Part II (1995) is a heartw...</td>\n",
-       "      <td>Father of the Bride Part II (1995) is a heartw...</td>\n",
-       "      <td>[-0.004295275546610355, 0.0179799385368824, -0...</td>\n",
        "      <td>[-0.00589523  0.0246773  -0.02444115 ...  0.00...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1194,20 +1436,6 @@
        "3  \"Waiting to Exhale\" (1995) is a heartfelt dram...   \n",
        "4  Father of the Bride Part II (1995) is a heartw...   \n",
        "\n",
-       "                                            all_text  \\\n",
-       "0  Toy Story is a groundbreaking animated film th...   \n",
-       "1  \"Jumanji (1995) is a thrilling adventure film ...   \n",
-       "2  \"Grumpier Old Men is a hilarious and heartwarm...   \n",
-       "3  \"Waiting to Exhale\" (1995) is a heartfelt dram...   \n",
-       "4  Father of the Bride Part II (1995) is a heartw...   \n",
-       "\n",
-       "                                     embeddings_3072  \\\n",
-       "0  [-0.030682744458317757, 0.0427243672311306, -0...   \n",
-       "1  [0.009568397887051105, 0.02835703268647194, -0...   \n",
-       "2  [0.02002841793000698, 0.010674105025827885, -0...   \n",
-       "3  [-0.04223187267780304, 0.039355866611003876, -...   \n",
-       "4  [-0.004295275546610355, 0.0179799385368824, -0...   \n",
-       "\n",
        "                                     embeddings_1024  \n",
        "0  [-0.04189223  0.05833309 -0.02476214 ... -0.02...  \n",
        "1  [ 0.01302368  0.03859716 -0.01630003 ... -0.01...  \n",
@@ -1216,19 +1444,19 @@
        "4  [-0.00589523  0.0246773  -0.02444115 ...  0.00...  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('movies_summary_embeddings.csv')\n",
+    "df = pd.read_csv('movies_summary_1024_embeddings.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "id": "824b9364-1f61-4cc7-8343-489c66b3cac8",
    "metadata": {},
    "outputs": [
@@ -1238,7 +1466,7 @@
        "-0.04189223359988252"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
