--- a/ml_1m/ml_1m/semantic_ctr_zeroshot/create_semantic_ctr_dataset.ipynb
+++ b/ml_1m/ml_1m/semantic_ctr_zeroshot/create_semantic_ctr_dataset.ipynb
@@ -16,7 +16,90 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e302f19d-7fe4-4774-87d2-09528018bc17",
+   "id": "a317d7da-489e-4b42-bf62-1ccc12317f32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3883 1024\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('movie_1024_embeddings.pkl', 'rb') as f:\n",
+    "    movie_1024_embeddings = pickle.load(f)\n",
+    "print(len(movie_1024_embeddings), len(movie_1024_embeddings[204]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "82edc6af-d93e-4080-a8a1-599170ef894f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6040 [3186, 1721, 1022, 1270, 2340, 1836, 3408, 1207, 2804, 720, 1193, 260, 919, 608, 2692, 1961, 2028, 3105, 938, 1962, 1035, 150, 2018, 1028, 1097, 914, 2797, 1287, 2762, 1246, 661, 2918, 531, 3114, 2791, 1029, 2321, 1197, 594, 2398, 1545, 527, 1, 588, 2687, 745, 595, 2294, 783, 2355, 1907, 1566, 48]\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_movie_dict_path = '../train_valid_test/user_movie_dict.pkl'\n",
+    "with open(user_movie_dict_path, 'rb') as f:\n",
+    "    user_movie_dict = pickle.load(f)\n",
+    "print(len(user_movie_dict), user_movie_dict[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2f14f21a-d862-4ce8-9f15-b3d0414b0ab4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6040 [1566]\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_valid_path = '../train_valid_test/user_valid.pkl'\n",
+    "with open(user_valid_path, 'rb') as f:\n",
+    "    user_valid_dict = pickle.load(f)\n",
+    "print(len(user_valid_dict), user_valid_dict[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4cfc5956-3050-4907-af31-3002094f5384",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6040 [48]\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_test_path = '../train_valid_test/user_test.pkl'\n",
+    "with open(user_test_path, 'rb') as f:\n",
+    "    user_test_dict = pickle.load(f)\n",
+    "print(len(user_test_dict), user_test_dict[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d81dafb4-ad0c-476b-a70c-8e79a754f345",
    "metadata": {},
    "outputs": [
     {
@@ -40,194 +123,214 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>user_id</th>\n",
        "      <th>movie_id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>cleaned_genre</th>\n",
-       "      <th>year</th>\n",
-       "      <th>summary</th>\n",
-       "      <th>embeddings_1024</th>\n",
+       "      <th>rating</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>Toy Story</td>\n",
-       "      <td>Animation,Children's,Comedy</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>Toy Story is a groundbreaking animated film th...</td>\n",
-       "      <td>[-0.04189223  0.05833309 -0.02476214 ... -0.02...</td>\n",
+       "      <td>3186</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Jumanji</td>\n",
-       "      <td>Adventure,Children's,Fantasy</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>\"Jumanji (1995) is a thrilling adventure film ...</td>\n",
-       "      <td>[ 0.01302368  0.03859716 -0.01630003 ... -0.01...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1721</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Grumpier Old Men</td>\n",
-       "      <td>Comedy,Romance</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>\"Grumpier Old Men is a hilarious and heartwarm...</td>\n",
-       "      <td>[ 0.02791052  0.01487485 -0.02803959 ... -0.01...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1022</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Waiting to Exhale</td>\n",
-       "      <td>Comedy,Drama</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>\"Waiting to Exhale\" (1995) is a heartfelt dram...</td>\n",
-       "      <td>[-0.05895531  0.05494044 -0.01637648 ... -0.00...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1270</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Father of the Bride Part II</td>\n",
-       "      <td>Comedy</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>Father of the Bride Part II (1995) is a heartw...</td>\n",
-       "      <td>[-0.00589523  0.0246773  -0.02444115 ...  0.00...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2340</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   movie_id                          name                 cleaned_genre  year  \\\n",
-       "0         1                    Toy Story    Animation,Children's,Comedy  1995   \n",
-       "1         2                      Jumanji   Adventure,Children's,Fantasy  1995   \n",
-       "2         3             Grumpier Old Men                 Comedy,Romance  1995   \n",
-       "3         4            Waiting to Exhale                   Comedy,Drama  1995   \n",
-       "4         5  Father of the Bride Part II                         Comedy  1995   \n",
-       "\n",
-       "                                             summary  \\\n",
-       "0  Toy Story is a groundbreaking animated film th...   \n",
-       "1  \"Jumanji (1995) is a thrilling adventure film ...   \n",
-       "2  \"Grumpier Old Men is a hilarious and heartwarm...   \n",
-       "3  \"Waiting to Exhale\" (1995) is a heartfelt dram...   \n",
-       "4  Father of the Bride Part II (1995) is a heartw...   \n",
-       "\n",
-       "                                     embeddings_1024  \n",
-       "0  [-0.04189223  0.05833309 -0.02476214 ... -0.02...  \n",
-       "1  [ 0.01302368  0.03859716 -0.01630003 ... -0.01...  \n",
-       "2  [ 0.02791052  0.01487485 -0.02803959 ... -0.01...  \n",
-       "3  [-0.05895531  0.05494044 -0.01637648 ... -0.00...  \n",
-       "4  [-0.00589523  0.0246773  -0.02444115 ...  0.00...  "
+       "   user_id  movie_id  rating\n",
+       "0        1      3186       4\n",
+       "1        1      1721       4\n",
+       "2        1      1022       5\n",
+       "3        1      1270       5\n",
+       "4        1      2340       3"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "movies_df = pd.read_csv('movies_summary_1024_embeddings.csv')\n",
-    "movies_df.head()"
+    "ratings_df = pd.read_csv('../ratings.csv')\n",
+    "ratings_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d75bdb84-1e59-4ace-bd14-d49b086a9997",
+   "execution_count": 21,
+   "id": "e57523aa-36b0-4285-bd7a-597090f4e9b9",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy.linalg import norm\n",
+    "\n",
+    "def findKSimilarMovies(user, valid_movie, k):\n",
+    "    movie_sim_dict = dict()\n",
+    "    # movies_watched = user_movie_dict[user][:-2] ### For Valid movie\n",
+    "    movies_watched = user_movie_dict[user][:-1] ### For Test movie\n",
+    "    # print(\"movies_watched:\", movies_watched)\n",
+    "    valid_movie_norm = norm(movie_1024_embeddings[valid_movie])\n",
+    "    for movie in movies_watched:\n",
+    "        movie_sim_dict[movie] = np.dot(movie_1024_embeddings[valid_movie], movie_1024_embeddings[movie])/(valid_movie_norm * norm(movie_1024_embeddings[movie]))\n",
+    "    movie_sim_dict = dict(sorted(movie_sim_dict.items(), key = lambda item: item[1], reverse = True))\n",
+    "    return list(movie_sim_dict.keys())[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cd73fbaa-f5ac-477c-bdbf-dc657895bb47",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<string>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "\u001b[0m  File \u001b[1;32m~/miniconda3/envs/mixtral/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3550\u001b[0m in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
-      "\u001b[0m  Cell \u001b[1;32mIn[7], line 1\u001b[0m\n    movies_df['embeddings_1024'] = movies_df.embeddings_1024.apply(eval).apply(np.array)\u001b[0m\n",
-      "\u001b[0m  File \u001b[1;32m~/miniconda3/envs/mixtral/lib/python3.9/site-packages/pandas/core/series.py:4897\u001b[0m in \u001b[1;35mapply\u001b[0m\n    return SeriesApply(\u001b[0m\n",
-      "\u001b[0m  File \u001b[1;32m~/miniconda3/envs/mixtral/lib/python3.9/site-packages/pandas/core/apply.py:1427\u001b[0m in \u001b[1;35mapply\u001b[0m\n    return self.apply_standard()\u001b[0m\n",
-      "\u001b[0m  File \u001b[1;32m~/miniconda3/envs/mixtral/lib/python3.9/site-packages/pandas/core/apply.py:1507\u001b[0m in \u001b[1;35mapply_standard\u001b[0m\n    mapped = obj._map_values(\u001b[0m\n",
-      "\u001b[0m  File \u001b[1;32m~/miniconda3/envs/mixtral/lib/python3.9/site-packages/pandas/core/base.py:921\u001b[0m in \u001b[1;35m_map_values\u001b[0m\n    return algorithms.map_array(arr, mapper, na_action=na_action, convert=convert)\u001b[0m\n",
-      "\u001b[0m  File \u001b[1;32m~/miniconda3/envs/mixtral/lib/python3.9/site-packages/pandas/core/algorithms.py:1743\u001b[0m in \u001b[1;35mmap_array\u001b[0m\n    return lib.map_infer(values, mapper, convert=convert)\u001b[0m\n",
-      "\u001b[0;36m  File \u001b[0;32mlib.pyx:2972\u001b[0;36m in \u001b[0;35mpandas._libs.lib.map_infer\u001b[0;36m\n",
-      "\u001b[0;36m  File \u001b[0;32m<string>:1\u001b[0;36m\u001b[0m\n\u001b[0;31m    [-0.04189223  0.05833309 -0.02476214 ... -0.02134957  0.03375586\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6040 [595, 588, 783, 594, 2687, 1022, 1029, 1907, 1, 3114, 919, 2355, 2018, 2294, 1197, 661, 1028, 2321, 938, 1270]\n"
      ]
     }
    ],
    "source": [
-    "movies_df['embeddings_1024'] = movies_df.embeddings_1024.apply(eval).apply(np.array)"
+    "k = 20\n",
+    "user_valid_sem_sim_movies = dict()\n",
+    "for user, movie in user_valid_dict.items():\n",
+    "    # print(user, movie)\n",
+    "    k_similar_movie_list = findKSimilarMovies(user, movie[0], k)\n",
+    "    # print(len(k_similar_movie_list), k_similar_movie_list)\n",
+    "    user_valid_sem_sim_movies[user] = k_similar_movie_list\n",
+    "    # break\n",
+    "print(len(user_valid_sem_sim_movies), user_valid_sem_sim_movies[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "59d6d948-6294-4ac0-9960-7bcf19a98ab6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'[-0.04189223  0.05833309 -0.02476214 ... -0.02134957  0.03375586\\n -0.02773763]'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import ast\n",
-    "temp = movies_df['embeddings_1024'][0]\n",
-    "temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "32e673d4-c261-4618-a2fd-2b7f7c54b6b4",
+   "execution_count": 19,
+   "id": "984f1b83-d8e7-4c5b-825f-c2047cc24d0a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
-      "0.04189223\n",
-      "0.04189223\n",
-      "0.05833309\n",
-      "0.05833309\n",
-      "-0.02476214\n",
-      "-0.02476214\n",
-      "...\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: '...'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m num\u001b[38;5;241m!=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(num)\n\u001b[0;32m----> 7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnum\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstrip\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: '...'"
+      "6040 [1022, 1270, 919, 938, 2018, 1028, 661, 3114, 1029, 2321, 1197, 594, 1, 588, 2687, 595, 2294, 783, 2355, 1907]\n"
      ]
     }
    ],
    "source": [
-    "import re\n",
-    "temp_list = re.split(\" |, |\\n\", temp[2:-2])\n",
-    "print(len(temp_list))\n",
-    "for num in temp_list:\n",
-    "    if num!='':\n",
-    "        print(num)\n",
-    "        print(float(num.strip()))"
+    "user_valid_sem_sim_data = dict()\n",
+    "for user, sem_sim_movies in user_valid_sem_sim_movies.items():\n",
+    "    cnt += 1\n",
+    "    user_items = ratings_df[ratings_df['user_id'] == user]['movie_id'].to_list()\n",
+    "    user_items = [item for item in user_items if item in sem_sim_movies]\n",
+    "    user_valid_sem_sim_data[user] = user_items\n",
+    "print(len(user_valid_sem_sim_data), user_valid_sem_sim_data[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "1e3a7904-da47-40b2-93b9-17634247cdbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./sem_sim_dataset/sem_sim_valid.pkl', 'wb') as f:\n",
+    "    pickle.dump(user_valid_sem_sim_data, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "cee1346a-2290-42ce-85eb-8071a4bdf353",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6040 [595, 783, 2687, 588, 1022, 2018, 1029, 1907, 1566, 661, 594, 1721, 1, 1197, 531, 1028, 919, 3114, 1246, 2321]\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 20\n",
+    "user_test_sem_sim_movies = dict()\n",
+    "for user, movie in user_test_dict.items():\n",
+    "    # print(user, movie)\n",
+    "    k_similar_movie_list = findKSimilarMovies(user, movie[0], k)\n",
+    "    # print(len(k_similar_movie_list), k_similar_movie_list)\n",
+    "    user_test_sem_sim_movies[user] = k_similar_movie_list\n",
+    "    # break\n",
+    "print(len(user_test_sem_sim_movies), user_test_sem_sim_movies[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0400be54-ea40-4075-950d-0142176ec283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6040 [1721, 1022, 919, 2018, 1028, 1246, 661, 531, 3114, 1029, 2321, 1197, 594, 1, 588, 2687, 595, 783, 1907, 1566]\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_test_sem_sim_data = dict()\n",
+    "for user, sem_sim_movies in user_test_sem_sim_movies.items():\n",
+    "    cnt += 1\n",
+    "    user_items = ratings_df[ratings_df['user_id'] == user]['movie_id'].to_list()\n",
+    "    user_items = [item for item in user_items if item in sem_sim_movies]\n",
+    "    user_test_sem_sim_data[user] = user_items\n",
+    "print(len(user_test_sem_sim_data), user_test_sem_sim_data[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d7d2ebd3-42da-4596-b9c9-bb8b33da2468",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./sem_sim_dataset/sem_sim_test.pkl', 'wb') as f:\n",
+    "    pickle.dump(user_test_sem_sim_data, f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a317d7da-489e-4b42-bf62-1ccc12317f32",
+   "id": "7c2b624b-712b-4d68-836b-cefe03cf9047",
    "metadata": {},
    "outputs": [],
    "source": []
