Semantic Similar Reasoning Valid Data - AUC 61.3

--- a/ml_1m/ml_1m/semantic_ctr_zeroshot/clean_inference.ipynb
+++ b/ml_1m/ml_1m/semantic_ctr_zeroshot/clean_inference.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "d7269b45-6c0d-4e5b-8bc3-0e5bc56055d5",
    "metadata": {},
    "outputs": [
@@ -26,12 +26,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000\n"
+      "6040\n"
      ]
     }
    ],
    "source": [
-    "inference_path = 'sem_ctr_test_inference_mixtral.pkl'\n",
+    "inference_path = 'sem_ctr_valid_inference_mixtral.pkl'\n",
     "# inference_path = 'ctr_test_inference_mixtral.pkl'\n",
     "with open(inference_path, 'rb') as f:\n",
     "    inference_dict = pickle.load(f)\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "6fabcd49-cf21-45f5-aa70-24f71818dbdb",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "4        1      2340       3"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "b6260dae-ca28-494c-8e34-7ff9f714b80f",
    "metadata": {
     "scrolled": true
@@ -237,7 +237,7 @@
        "1701     1006      2706       4"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "c4e2ae60",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "1702     1006      2762       4"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "6c385f0f-e18e-449f-8932-2aa4e29b3228",
    "metadata": {
     "scrolled": true
@@ -380,9 +380,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes: 847 -- No: 145 -- Invalid: 8\n",
-      "invalid_users: [102, 1158, 1283, 1440, 1585, 1608, 1627, 1658]\n",
-      "1000\n"
+      "Yes: 4236 -- No: 1729 -- Invalid: 75\n",
+      "invalid_users: [1026, 1078, 1195, 1207, 127, 1337, 1468, 1627, 1630, 1652, 1671, 1672, 1692, 175, 1789, 1808, 1893, 1936, 2199, 2239, 245, 2465, 2494, 26, 2689, 2714, 2753, 2998, 310, 3190, 3313, 3382, 3490, 3540, 3589, 3625, 3635, 3642, 3657, 3729, 3762, 3784, 3806, 3899, 3922, 3960, 4001, 4064, 4134, 4226, 4242, 430, 4363, 454, 4640, 4664, 4683, 4703, 4851, 4886, 5017, 505, 5188, 5271, 5311, 5334, 5410, 550, 56, 5603, 5725, 5801, 5873, 6035, 794]\n",
+      "6040\n"
      ]
     }
    ],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "7a7e4e8c-dd55-49ee-8ccc-754489a27462",
    "metadata": {},
    "outputs": [
@@ -428,12 +428,12 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[ 49 136]\n",
-      " [104 711]]\n",
-      "AUC: 0.5686287514508372\n",
-      "Precision: 0.8394332939787486\n",
-      "Recall: 0.8723926380368098\n",
-      "Accuracy: 0.76\n"
+      "[[ 511  542]\n",
+      " [1293 3694]]\n",
+      "AUC: 0.6130030196269084\n",
+      "Precision: 0.8720491029272899\n",
+      "Recall: 0.7407258873069982\n",
+      "Accuracy: 0.6961920529801324\n"
      ]
     }
    ],
