Semantic zeroshot reasoning test results 3000 - AUC 62.48

--- a/ml_1m/ml_1m/semantic_ctr_zeroshot/clean_inference.ipynb
+++ b/ml_1m/ml_1m/semantic_ctr_zeroshot/clean_inference.ipynb
@@ -26,13 +26,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6040\n"
+      "1150\n"
      ]
     }
    ],
    "source": [
-    "inference_path = 'sem_ctr_valid_inference_mixtral.pkl'\n",
-    "# inference_path = 'ctr_test_inference_mixtral.pkl'\n",
+    "# inference_path = 'sem_ctr_valid_inference_mixtral.pkl'\n",
+    "inference_path = 'sem_ctr_test_inference_mixtral.pkl'\n",
     "with open(inference_path, 'rb') as f:\n",
     "    inference_dict = pickle.load(f)\n",
     "print(len(inference_dict))"
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "6fabcd49-cf21-45f5-aa70-24f71818dbdb",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "4        1      2340       3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b6260dae-ca28-494c-8e34-7ff9f714b80f",
    "metadata": {
     "scrolled": true
@@ -237,7 +237,7 @@
        "1701     1006      2706       4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "c4e2ae60",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "1702     1006      2762       4"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "6c385f0f-e18e-449f-8932-2aa4e29b3228",
    "metadata": {
     "scrolled": true
@@ -380,9 +380,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes: 4236 -- No: 1729 -- Invalid: 75\n",
-      "invalid_users: [1026, 1078, 1195, 1207, 127, 1337, 1468, 1627, 1630, 1652, 1671, 1672, 1692, 175, 1789, 1808, 1893, 1936, 2199, 2239, 245, 2465, 2494, 26, 2689, 2714, 2753, 2998, 310, 3190, 3313, 3382, 3490, 3540, 3589, 3625, 3635, 3642, 3657, 3729, 3762, 3784, 3806, 3899, 3922, 3960, 4001, 4064, 4134, 4226, 4242, 430, 4363, 454, 4640, 4664, 4683, 4703, 4851, 4886, 5017, 505, 5188, 5271, 5311, 5334, 5410, 550, 56, 5603, 5725, 5801, 5873, 6035, 794]\n",
-      "6040\n"
+      "Yes: 810 -- No: 325 -- Invalid: 15\n",
+      "invalid_users: [1099, 1107, 1136, 1155, 119, 1387, 1431, 144, 1480, 1623, 1672, 1695, 1719, 1729, 1878]\n",
+      "1150\n"
      ]
     }
    ],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7a7e4e8c-dd55-49ee-8ccc-754489a27462",
    "metadata": {},
    "outputs": [
@@ -428,12 +428,12 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[ 511  542]\n",
-      " [1293 3694]]\n",
-      "AUC: 0.6130030196269084\n",
-      "Precision: 0.8720491029272899\n",
-      "Recall: 0.7407258873069982\n",
-      "Accuracy: 0.6961920529801324\n"
+      "[[104 110]\n",
+      " [236 700]]\n",
+      "AUC: 0.6169222781372314\n",
+      "Precision: 0.8641975308641975\n",
+      "Recall: 0.7478632478632479\n",
+      "Accuracy: 0.6991304347826087\n"
      ]
     }
    ],
@@ -446,8 +446,8 @@
     "fn_users = []\n",
     "\n",
     "for user, inference in user_inference_dict.items():\n",
-    "    original_rating = user_valid_movie_rating_df[user_valid_movie_rating_df['user_id'] == user]['rating'].values[0]\n",
-    "    # original_rating = user_test_movie_rating_df[user_test_movie_rating_df['user_id'] == user]['rating'].values[0]\n",
+    "    # original_rating = user_valid_movie_rating_df[user_valid_movie_rating_df['user_id'] == user]['rating'].values[0]\n",
+    "    original_rating = user_test_movie_rating_df[user_test_movie_rating_df['user_id'] == user]['rating'].values[0]\n",
     "    # print(original_rating)\n",
     "    if original_rating >= 3:\n",
     "        y_true.append(1)\n",
