Semantic zeroshot reasoning test results - AUC 0.6202

--- a/ml_1m/ml_1m/semantic_ctr_zeroshot/clean_inference.ipynb
+++ b/ml_1m/ml_1m/semantic_ctr_zeroshot/clean_inference.ipynb
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1150\n"
+      "6040\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "6fabcd49-cf21-45f5-aa70-24f71818dbdb",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "4        1      2340       3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b6260dae-ca28-494c-8e34-7ff9f714b80f",
    "metadata": {
     "scrolled": true
@@ -237,7 +237,7 @@
        "1701     1006      2706       4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "c4e2ae60",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "1702     1006      2762       4"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "6c385f0f-e18e-449f-8932-2aa4e29b3228",
    "metadata": {
     "scrolled": true
@@ -380,9 +380,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes: 810 -- No: 325 -- Invalid: 15\n",
-      "invalid_users: [1099, 1107, 1136, 1155, 119, 1387, 1431, 144, 1480, 1623, 1672, 1695, 1719, 1729, 1878]\n",
-      "1150\n"
+      "Yes: 4216 -- No: 1750 -- Invalid: 74\n",
+      "invalid_users: [1099, 1107, 1136, 1155, 119, 1387, 1431, 144, 1480, 1623, 1672, 1695, 1719, 1729, 1878, 2067, 2154, 2199, 2354, 2388, 2513, 2682, 2692, 2795, 2806, 2870, 2898, 3014, 3067, 3171, 3342, 3349, 3410, 3488, 3581, 3647, 3684, 3731, 377, 3782, 3797, 3817, 3928, 4031, 4035, 407, 4140, 4228, 4292, 4330, 4351, 4505, 4562, 4625, 4662, 4786, 479, 4841, 4918, 5137, 5257, 5396, 5457, 561, 57, 571, 5710, 5725, 5728, 5826, 5882, 6021, 713, 927]\n",
+      "6040\n"
      ]
     }
    ],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "7a7e4e8c-dd55-49ee-8ccc-754489a27462",
    "metadata": {},
    "outputs": [
@@ -428,12 +428,12 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[104 110]\n",
-      " [236 700]]\n",
-      "AUC: 0.6169222781372314\n",
-      "Precision: 0.8641975308641975\n",
-      "Recall: 0.7478632478632479\n",
-      "Accuracy: 0.6991304347826087\n"
+      "[[ 533  533]\n",
+      " [1291 3683]]\n",
+      "AUC: 0.6202251708886208\n",
+      "Precision: 0.8735768500948766\n",
+      "Recall: 0.7404503417772417\n",
+      "Accuracy: 0.6980132450331126\n"
      ]
     }
    ],
